--- a/papers/hrr-paper/paper.tex
+++ b/papers/hrr-paper/paper.tex
@@ -684,8 +684,8 @@ In figure \ref{perm-b} "ball" is being probed, and the result after inverse perm
 				\EndFor	
 				\Function{ProbeMemory}{memory, op}
 				\State $r \gets IFFT(FFT(memory) * FFT(op)^{-1})$
-				\State $r \gets permute(r, P^{-1})$
-				\State $cleanResult \gets argmax(r)$
+				\State $p \gets permute(r, P^{-1})$
+				\State $cleanResult \gets argmax(p)$
 				
 				\Return $cleanResult$
 				\EndFunction
@@ -796,7 +796,7 @@ In figure \ref{perm-b} "ball" is being probed, and the result after inverse perm
 			\label{fig:probing-double}
 		\end{subfigure}
 		
-		\caption{Representation of visual scene in short term symbolic memory. }
+		\caption{Representation of visual scene in short term symbolic memory at various stages of processing. }
 		
 	\end{figure}
 	
