--- a/papers/hrr-paper/paper.tex
+++ b/papers/hrr-paper/paper.tex
@@ -684,8 +684,8 @@ In figure \ref{perm-b} "ball" is being probed, and the result after inverse perm
 				\EndFor	
 				\Function{ProbeMemory}{memory, op}
 				\State $r \gets IFFT(FFT(memory) * FFT(op)^{-1})$
-				\State $p \gets permute(r, P^{-1})$
-				\State $cleanResult \gets argmax(p)$
+				\State $r \gets permute(r, P^{-1})$
+				\State $cleanResult \gets argmax(r)$
 				
 				\Return $cleanResult$
 				\EndFunction
@@ -725,9 +725,9 @@ In figure \ref{perm-b} "ball" is being probed, and the result after inverse perm
 				\label{fig:capacity_scalar}
 			\end{subfigure}	
 			\center
-			\begin{subfigure}{1\columnwidth}
+			\begin{subfigure}{0.45\columnwidth}
 				\center
-				\includegraphics[width=0.5\columnwidth]{img/capacity_coordinate.png}
+				\includegraphics[width=1\columnwidth]{img/capacity_coordinate.png}
 				\caption{Binding pairs of one 2D coordinate and a random symbol, then probing for the scalar.}
 				\label{fig:capacity_coordinate}
 			\end{subfigure}	
@@ -796,7 +796,7 @@ In figure \ref{perm-b} "ball" is being probed, and the result after inverse perm
 			\label{fig:probing-double}
 		\end{subfigure}
 		
-		\caption{Representation of visual scene in short term symbolic memory at various stages of processing. }
+		\caption{Representation of visual scene in short term symbolic memory. }
 		
 	\end{figure}
 	
