Added images to experiment

--- a/papers/hrr-paper/paper.tex
+++ b/papers/hrr-paper/paper.tex
@@ -346,7 +346,7 @@
 	% not capitalized unless they are the first or last word of the title.
 	% Linebreaks \\ can be used within to get better formatting as desired.
 	% Do not put math or special symbols in the title.
-	\title{Probabilistic symbol encoding for \\convolutional associative memories}
+	\title{Probabilistic Symbol Encoding for \\Convolutional Associative Memories}
 	
 	
 	% author names and affiliations
@@ -894,6 +894,24 @@ The basic idea is centered around symbolic representations of all three parts in
 \end{enumerate}
 
 An example of this kind of symbolic script is given in figure \ref{fig:symbolic-scripting}. Here the memory encodes a light following behaviour.
+
+		\begin{figure}[th!]
+			\begin{subfigure}{0.45\columnwidth}
+				\center
+				\includegraphics[width=1\columnwidth]{img/gaussianbar.png}
+				\caption{Gaussian distribution without permutation.}
+				\label{fig:gaussianbar}
+			\end{subfigure}
+			\begin{subfigure}{0.45\columnwidth}
+				\center
+				\includegraphics[width=1\columnwidth]{img/gaussianbarperm.png}
+				\caption{Gaussian distribution with permutation.\\
+				}
+				\label{fig:gaussianbarperm}
+			\end{subfigure}	
+		\caption{Sensory input of an objects positions in the visual field at two points in time. A comparison between the raw generated input and its permuted version can be seen.}
+		\label{gaussian}
+		\end{figure}	
 
 	\section{Conclusions}
 	We have introduced a mechanism for intrinsic symbol encoding/decoding for Holographic Reduced Representations.
