Realigned two images

--- a/papers/hrr-paper/paper.tex
+++ b/papers/hrr-paper/paper.tex
@@ -905,7 +905,7 @@ An example of this kind of symbolic script is given in figure \ref{fig:symbolic-
 			\begin{subfigure}{0.45\columnwidth}
 				\center
 				\includegraphics[width=1\columnwidth]{img/gaussianbarperm.png}
-				\caption{Gaussian distribution with permutation.\\
+				\caption{Gaussian distribution with permutation.
 				}
 				\label{fig:gaussianbarperm}
 			\end{subfigure}	
