Realigned images, again

--- a/papers/hrr-paper/paper.tex
+++ b/papers/hrr-paper/paper.tex
@@ -899,10 +899,10 @@ An example of this kind of symbolic script is given in figure \ref{fig:symbolic-
 			\begin{subfigure}{0.45\columnwidth}
 				\center
 				\includegraphics[width=1\columnwidth]{img/gaussianbar.png}
-				\caption{Gaussian probability distribution for raw input value}
+				\caption{Gaussian probability distribution for raw input value\\}
 				\label{fig:gaussianbar}
 			\end{subfigure}
-			\begin{subfigure}{0.54\columnwidth}
+			\begin{subfigure}{0.45\columnwidth}
 				\center
 				\includegraphics[width=1\columnwidth]{img/gaussianbarperm.png}
 				\caption{Probabilistic symbolic encoding suitable for HRR after permutation
