Added axes to object detection image

--- a/papers/hrr-paper/paper.tex
+++ b/papers/hrr-paper/paper.tex
@@ -758,7 +758,7 @@ In figure \ref{perm-b} "ball" is being probed, and the result after inverse perm
 		\center
 		\begin{subfigure}{1.0\columnwidth}
 			\center
-			\includegraphics[width=0.6\columnwidth]{img/map_original.jpg}
+			\includegraphics[width=0.6\columnwidth]{img/map_ticks.jpg}
 			\caption{Original scene and a set of detected objects}
 			\label{fig:object-detection}
 		\end{subfigure}
