--- a/papers/hrr-paper/paper.tex
+++ b/papers/hrr-paper/paper.tex
@@ -51,7 +51,7 @@
 
 
 
-\documentclass[conference]{IEEEtran}
+\documentclass[journal]{journal}
 % Some Computer Society conferences also require the compsoc mode option,
 % but others use the standard conference format.
 %
@@ -352,10 +352,9 @@
 	% author names and affiliations
 	% use a multiple column layout for up to three different
 	% affiliations
-	\author{\IEEEauthorblockN{Igor Peric, Alexandru Lesi, Daniel Spies, Stefan Ulbrich, Arne R{\"o}nnau, Marius Z{\"o}llner, R{\"u}diger Dillman}
-		\IEEEauthorblockA{FZI Forschungszentrum Informatik\\
-			Karlsruhe, Germany\\
-			Email: $\{$peric, lesi, spies, ulbrich, roennau, zoellner, dillmann$\}$@fzi.de}
+	\author{Igor~Peric, Alexandru~Lesi, Daniel~Spies, Stefan~Ulbrich, Arne~R{\"o}nnau, Marius~Z{\"o}llner, R{\"u}diger~Dillman\\
+		FZI Forschungszentrum Informatik, Karlsruhe, Germany\\
+		Email: $\{$peric, lesi, spies, ulbrich, roennau, zoellner, dillmann$\}$@fzi.de
 	}
 	
 	% conference papers do not typically use \thanks and this command
