Add keywords and change text

--- a/papers/hrr-paper/paper.tex
+++ b/papers/hrr-paper/paper.tex
@@ -402,7 +402,7 @@
 		We propose moving away from traditional exact symbolic representation
 		to probabilistic one, replacing unique symbol identifiers with 
 		probability density function.
-		As we discover, this requires randomly chosen permutations for encoding and
+		We show this requires randomly chosen permutations for encoding and
 		their corresponding inverse for decoding. These are necessary
 		for the uniform distribution of signals across Fourier space where
 		embedding takes place.
@@ -415,12 +415,13 @@
 		benchmark for HRRs \cite{Plate:1995:HolographicReducedRepresentations}.
 		We also evaluate our memories in two different robotics tasks: visual scene memory and state machine scripting (holographic controllers).
 	\end{abstract}
-	
-	% no keywords
-	
-	
-	
-	
+
+% Note that keywords are not normally used for peerreview papers.
+\begin{IEEEkeywords}
+	Vector Symbolic Architectures, associative memories, symbol encoding, symbolic scripting
+\end{IEEEkeywords}
+
+
 	% For peer review papers, you can put extra information on the cover
 	% page as needed:
 	% \ifCLASSOPTIONpeerreview
